--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ last_name: Ray
 email: ayan@ayanray.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
-icon: 🔥 # the emoji used as the favicon
+icon: 👋 # the emoji used as the favicon
 url:  # the base hostname & protocol for your site
 baseurl: /al-folio # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
