--- a/_config.yml
+++ b/_config.yml
@@ -71,8 +71,8 @@ panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Ayan Ray  # your blog must have a name for it to show up in the nav bar
-blog_description: Personal Github Page
+blog_name: # your blog must have a name for it to show up in the nav bar
+blog_description: 
 permalink: /blog/:year/:title/
 
 # Pagination
