add google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ stackoverflow_id: #your stackoverflow id
 contact_note: >
   Don't hesistate to email or message me on Twitter or LinkedIn!
 
-google_analytics: UA-XXXXXXXXX # out your google-analytics code
+google_analytics: UA-29309088-1 # out your google-analytics code
 panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 
 # -----------------------------------------------------------------------------
